[package]
name = "spacebin"
version = "0.1.0"
edition = "2021"
description = "A simple and elegant XOR-based encryption and decryption tool that converts text into a space-and-tab formatted ciphertext. Perfect for lightweight data obfuscation with optional salt and integrity checks."
license = "GPL-3.0"
readme = "README.md"

[dependencies]
rand = "0.9.0"
hex = "0.4.3"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
crc32fast = "1.3.2"